--- a/tester.html
+++ b/tester.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>ER Watcher</title>
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	</head>
 	<body>
 		<div class="container">
@@ -14,8 +14,8 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script type="text/javascript" src="//www.google.com/jsapi"></script>
+		<script type="text/javascript" src="https:////ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="js/er-watcher.min.js"></script>
 		<script>
 			// Page load code
